<resources>
    <string name="app_name">Suecada</string>
    <string name="sueca">Sueca</string>
    <string name="suecaItaliana">Sueca Italiana</string>
    <string name="suecaItalianaCompetitivo">Sueca Italiana Ranked</string>
    <string name="Online">Online:</string>
    <string name="consultarRanking">Consultar Ranking</string>
    <string name="Offline">Offline:</string>
    <string name="jogos">Jogos:</string>
    <string name="jogador1">Jogador 1</string>
    <string name="jogador2">Jogador 2</string>
    <string name="jogador3">Jogador 3</string>
    <string name="jogador4">Jogador 4</string>
    <string name="jogador5">Jogador 5</string>
    <string name="seguinte">Seguinte</string>
    <string name="pontuacao">Pontuação</string>
    <string name="mais1">+1</string>
    <string name="mais2">+2</string>
    <string name="mais4">+4</string>
    <string name="menos1">-1</string>
    <string name="menos2">-2</string>
    <string name="menos4">-4</string>
    <string name="escolher_nomes">Escolher Nomes dos Jogadores</string>
    <string name="vos">Vós</string>
    <string name="nos">Nós</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="anular">Anular</string>
    <string name="sair">Sair</string>
    <string name="registar">Registar</string>
    <string name="zero">0</string>
    <string name="total">Total:</string>
    <string name="logotipo">Logótipo</string>
    <string name="ok">OK</string>
    <string name="title_activity_ita_pontos">Sueca Italiana</string>
    <string name="action_settings">Settings</string>
    <string name="rondas">Pontuações por Ronda</string>
    <string name="efetuar_login">Efetuar Login</string>
    <string name="terminar">Terminar</string>
    <string name="gerir_grupo">Gerir Grupo</string>
    <string name="jogadores_grupo">Jogadores no Grupo</string>
    <string name="title_activity_login">Login</string>
    <string name="minha_conta">A Minha Conta</string>
    <string name="meus_grupos">Os Meus Grupos</string>
    <string name="info">Informação</string>
    <string name="abrir">abrir</string>
    <string name="fechar">fechar</string>
    <string name="admin">Administrador</string>
    <string name="entrar">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_nomegrupo">Nome do Grupo</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_nome_proprio">Nome Próprio</string>
    <string name="prompt_apelido">Apelido</string>
    <string name="action_login">Login</string>
    <string name="action_login_short">Login</string>
    <string name="error_grupo_invalido">This email address is invalid</string>
    <string name="error_password_invalida">This password is too short</string>
    <string name="error_password_incorreta">This password is incorrect</string>
    <string name="error_campo_obrigatorio">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="criar_novo_grupo"><u>Criar novo grupo</u></string>
    <string name="criar_grupo">Criar Grupo</string>
    <string name="esqueceupw"><u>Esqueceu-se da palavra-passe?</u></string>
    <string name="continuar_offline"><u>Continuar Offline</u></string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="terminar_sessao">Terminar Sessão</string>
    <string name="ligado_grupo">Grupo Atual: </string>
    <string name="grupo_atual">%1$s</string>

</resources>
