<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/primary_light"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_below="@+id/tvNomes"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <LinearLayout
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/actvj1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:ems="10"
                android:hint="@string/jogador1"
                android:inputType="textCapWords"
                android:maxLength="8"
                android:imeOptions="actionNext"
                android:completionThreshold="1"/>

            <AutoCompleteTextView
                android:id="@+id/actvj2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:ems="10"
                android:hint="@string/jogador2"
                android:inputType="textCapWords"
                android:maxLength="8"
                android:imeOptions="actionNext"
                android:completionThreshold="1"/>

            <AutoCompleteTextView
                android:id="@+id/actvj3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/jogador3"
                android:inputType="textCapWords"
                android:maxLength="8"
                android:imeOptions="actionNext"
                android:completionThreshold="1"/>

            <AutoCompleteTextView
                android:id="@+id/actvj4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/jogador4"
                android:inputType="textCapWords"
                android:maxLength="8"
                android:imeOptions="actionNext"
                android:completionThreshold="1"/>

            <AutoCompleteTextView
                android:id="@+id/actvj5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/jogador5"
                android:inputType="textCapWords"
                android:maxLength="8"
                android:imeOptions="actionDone"
                android:completionThreshold="1"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnrSeguinte"
        android:textColor="@color/primary_text"
        android:background="@color/icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/scrollView2"
        android:layout_alignEnd="@id/scrollView2"
        android:layout_below="@+id/scrollView2"
        android:layout_marginTop="40dp"
        android:onClick="guardaNomesRanked"
        android:text="@string/seguinte" />

    <TextView
        android:id="@+id/tvNomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolher_nomes"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>