<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:id="@+id/constraintLayout">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="117dp"
        app:srcCompat="@drawable/splash"
        android:id="@+id/iVLogoLogin"
        android:transitionName="logo"
        android:contentDescription="@string/logotipo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/eTNomeGrupo"
        android:hint="@string/prompt_nomegrupo"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/iVLogoLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/eTPassword"
        android:hint="@string/prompt_password"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/eTNomeGrupo" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frameLayout"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/eTPassword"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"/>

        <Button
            android:text="@string/action_login"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:background="@color/icons"
            android:textColor="@color/primary_text"
            android:layout_marginTop="16dp"
            />



    </FrameLayout>



    <TextView
        android:text="@string/esqueceupw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEsqueceuPW"
        android:textColor="@color/icons"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:text="@string/criar_novo_grupo"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnCriarGrupo"
        android:textColor="@color/icons"
        android:textAlignment="center"
        android:backgroundTint="@color/primary_light"
        app:layout_constraintTop_toBottomOf="@+id/tvEsqueceuPW"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:onClick="CriarGrupo" />

    <Button
        android:text="@string/continuar_offline"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:id="@+id/btnContinuarOffline"
        android:textColor="@color/icons"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button"
        android:backgroundTint="@color/primary_light"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCriarGrupo"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:onClick="ContinuarOffline" />


</android.support.constraint.ConstraintLayout>
