<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:id="@+id/activity_menu_offline">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="117dp"
        app:srcCompat="@drawable/splash"
        android:id="@+id/iVLogoMenu"
        android:contentDescription="@string/logotipo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:text="@string/sueca"
        android:id="@+id/btnSueca1"
        android:onClick="SuecaOffline"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/iVLogoMenu"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/icons"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:textColor="@color/primary_text" />

    <Button
        android:text="@string/suecaItaliana"
        android:layout_height="100dp"
        android:id="@+id/btnItaliana1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSueca1"
        android:layout_width="0dp"
        android:onClick="ItalianaOffline"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/icons"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/primary_text" />

    <Button
        android:text="@string/action_login"
        android:layout_height="60dp"
        android:id="@+id/btnLoginMenuOff"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:backgroundTint="@color/icons"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/btnItaliana1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:onClick="Login"
        android:textSize="20sp"
        android:textColor="@color/primary_text" />

</android.support.constraint.ConstraintLayout>
